# fail-reproduce-2270

./: Cargo.toml  Dioxus.toml
src/: main.rs
